--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,20 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
   line-height: 1;          /* fix uneven spacing */
 }
 
+/* Ensure side nav icons + text align nicely */
+.side-nav li a {
+  display: flex;               /* align icon + text on one row */
+  align-items: center;         /* vertical centering */
+  line-height: 1.5rem !important; /* normalize text line height */
+}
+
+.side-nav li a i {
+  margin-right: 12px;          /* space between icon + text */
+  font-size: 18px;             /* consistent size */
+  min-width: 20px;             /* reserve space for alignment */
+  text-align: center;
+}
+
 
 li.logo span {
   display: block;
