--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -830,3 +830,28 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span {
   line-height: 1.2;
   display: inline-block;
 }
+
+/* Force side-nav items to align icons + labels properly */
+ul.side-nav.fixed.table-of-contents li:not(.logo) a {
+  display: flex !important;          /* put icon + text on one line */
+  align-items: center !important;    /* vertical centering */
+  justify-content: flex-start;
+  gap: 10px;                         /* spacing between icon and text */
+  height: auto !important;
+  padding: 8px 0 !important;         /* tighter padding, avoids big gaps */
+  line-height: 1.4 !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) a i {
+  flex: 0 0 20px;                    /* fixed width box for icon */
+  font-size: 18px;
+  text-align: center;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) a span {
+  flex: 1;                           /* text takes remaining space */
+  display: inline-block;
+  line-height: 1.4 !important;       /* normalize label vertical spacing */
+  margin: 0;
+  padding: 0;
+}
