--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,3 +877,210 @@ ul.table-of-contents li:not(.logo) a:hover span {
     color: #009688 !important;
   }
 }
+
+/* ========================================
+   COMPLETE NAVIGATION FIX - ADD TO END OF YOUR CSS
+   ======================================== */
+
+/* OVERRIDE ALL EXISTING NAVIGATION STYLES */
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a,
+ul.side-nav.fixed li:not(.logo) > a,
+ul#nav-mobile li:not(.logo) > a {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: flex-start !important;
+    gap: 15px !important;
+    padding: 14px 20px !important;
+    line-height: 1.4 !important;
+    height: auto !important;
+    min-height: 48px !important;
+    box-sizing: border-box !important;
+    color: #333 !important;
+    font-size: 14px !important;
+    text-decoration: none !important;
+    transition: all 0.3s ease !important;
+    border: none !important;
+    margin: 0 !important;
+}
+
+/* FORCE ICON ALIGNMENT */
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a i,
+ul.side-nav.fixed li:not(.logo) > a i,
+ul#nav-mobile li:not(.logo) > a i {
+    font-size: 16px !important;
+    width: 18px !important;
+    height: 16px !important;
+    text-align: center !important;
+    line-height: 16px !important;
+    flex-shrink: 0 !important;
+    flex-grow: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    color: #008073 !important;
+    vertical-align: baseline !important;
+    display: inline-block !important;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+}
+
+/* FORCE TEXT ALIGNMENT */
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a span,
+ul.side-nav.fixed li:not(.logo) > a span,
+ul#nav-mobile li:not(.logo) > a span {
+    margin: 0 !important;
+    padding: 0 !important;
+    line-height: 1.4 !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    color: #333 !important;
+    flex-grow: 1 !important;
+    flex-shrink: 1 !important;
+    display: inline-block !important;
+    vertical-align: baseline !important;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    white-space: nowrap !important;
+}
+
+/* HOVER EFFECTS */
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a:hover,
+ul.side-nav.fixed li:not(.logo) > a:hover,
+ul#nav-mobile li:not(.logo) > a:hover {
+    background-color: #fafafa !important;
+    border-left: 3px solid #008073 !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a:hover i,
+ul.side-nav.fixed li:not(.logo) > a:hover i,
+ul#nav-mobile li:not(.logo) > a:hover i {
+    color: #004d40 !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a:hover span,
+ul.side-nav.fixed li:not(.logo) > a:hover span,
+ul#nav-mobile li:not(.logo) > a:hover span {
+    color: #004d40 !important;
+    font-weight: 500 !important;
+}
+
+/* ACTIVE STATE */
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a.active,
+ul.side-nav.fixed li:not(.logo) > a.active,
+ul#nav-mobile li:not(.logo) > a.active {
+    background-color: #fafafa !important;
+    border-left: 3px solid #008073 !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a.active i,
+ul.side-nav.fixed li:not(.logo) > a.active i,
+ul#nav-mobile li:not(.logo) > a.active i {
+    color: #004d40 !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a.active span,
+ul.side-nav.fixed li:not(.logo) > a.active span,
+ul#nav-mobile li:not(.logo) > a.active span {
+    color: #004d40 !important;
+    font-weight: 500 !important;
+}
+
+/* MOBILE NAVIGATION FIX */
+@media (max-width: 992px) {
+    ul#slide-out li:not(.logo) > a {
+        display: flex !important;
+        align-items: center !important;
+        justify-content: flex-start !important;
+        gap: 15px !important;
+        padding: 16px 20px !important;
+        line-height: 1.4 !important;
+        height: auto !important;
+        min-height: 48px !important;
+        color: #333 !important;
+        font-size: 14px !important;
+        text-decoration: none !important;
+    }
+    
+    ul#slide-out li:not(.logo) > a i {
+        font-size: 16px !important;
+        width: 18px !important;
+        height: 16px !important;
+        text-align: center !important;
+        line-height: 16px !important;
+        color: #008073 !important;
+        flex-shrink: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+    
+    ul#slide-out li:not(.logo) > a span {
+        font-size: 14px !important;
+        color: #333 !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        line-height: 1.4 !important;
+    }
+    
+    /* Mobile hamburger menu icon fix */
+    nav a.button-collapse i {
+        color: #009688 !important;
+        font-size: 24px !important;
+    }
+}
+
+/* RESET ANY INTERFERING STYLES */
+ul.side-nav li {
+    padding: 0 !important;
+}
+
+ul.side-nav.fixed a {
+    box-sizing: border-box !important;
+}
+
+/* LOGO SECTION - Keep existing styling */
+ul.side-nav.fixed li.logo {
+    background-color: #fafafa;
+    border-bottom: 1px solid #ddd;
+    box-sizing: content-box;
+    min-height: 90px;
+    padding: 30px 30px 40px;
+}
+
+ul.side-nav.fixed li.logo a {
+    font-weight: 200;
+    line-height: 100%;
+    display: block !important;
+    padding: 0 !important;
+}
+
+ul.table-of-contents li.logo a.active, 
+ul.table-of-contents li.logo a:hover {
+    border: none;
+    font-weight: 200;
+}
+
+/* SPECIFIC FIX FOR FONT AWESOME ICONS */
+.fas, .far, .fab {
+    font-family: "Font Awesome 6 Free" !important;
+    font-weight: 900 !important;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block !important;
+    font-style: normal !important;
+    font-variant: normal !important;
+    text-rendering: auto !important;
+}
+
+/* ENSURE NO TEXT OVERFLOW */
+ul.side-nav {
+    width: 190px !important;
+    overflow-x: hidden !important;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) > a span {
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+}
