--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,14 +120,22 @@
   background-color: white;
 }
 
-.button-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  justify-content: flex-start;
-  margin: 2rem 0 0 0;
-  padding: 0;
+/* For larger screens - align buttons to left under social icons */
+@media (min-width: 993px) {
+  .buttons {
+    text-align: left;
+    margin-left: 0; /* Align with social icons */
+    padding-left: 0;
+  }
 }
+
+/* For mobile/tablet - keep buttons centered */
+@media (max-width: 992px) {
+  .buttons {
+    text-align: center;
+    margin: 1.5rem auto;
+    max-width: 300px;
+  }
 
 .buttons {
   display: flex;
