--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,23 @@
 .profile-pic {
   position: relative;
-  max-width:130px;
-  max-height:130px;
-  width: auto;
-  height: auto;
-  overflow: hidden;
-  /* display: inline-block; */
-  
-  
-  /* background-size: cover;  */
-  margin: -31px; 
-  margin-left:-7px;
-  border: 6px solid rgba(0, 77, 64, 0.4); 
+  width: 120px !important;
+  height: 120px !important;
+  margin: 0 auto !important;
+  border: 4px solid rgba(0, 77, 64, 0.4) !important;
   border-radius: 50% !important;
+  overflow: hidden !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-color: #f5f5f5 !important;
 }
 
 .profile-pic img {
-  width: 100%;
-  height: auto;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
+  object-position: center !important;
+  display: block !important;
 }
 
 .tracker {
@@ -297,11 +297,16 @@ ul.table-of-contents li.logo a.active, ul.table-of-contents li.logo a:hover {
 } */
 
 ul.side-nav.fixed li.logo {
-  background-color: #fafafa;
-  border-bottom: 1px solid #ddd;
-  box-sizing: content-box;
-  min-height: 90px;
-  padding: 30px 30px 40px;
+  background-color: #fafafa !important;
+  border-bottom: 1px solid #ddd !important;
+  box-sizing: content-box !important;
+  min-height: 150px !important;
+  padding: 25px 20px !important;
+  text-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
 }
 
 ul.side-nav.fixed li.logo a {
