--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1424,3 +1424,53 @@ ul#nav-mobile li:not(.logo) > a.active {
   object-position: center;
   display: block;
 }
+
+.side-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 220px;
+}
+
+.side-nav li a {
+  display: flex;
+  align-items: center;
+  padding: 10px 16px;
+  text-decoration: none;
+  color: #004d40;
+  font-weight: 500;
+  transition: background 0.3s;
+}
+
+.side-nav li a:hover {
+  background: rgba(0, 77, 64, 0.1);
+}
+
+.side-nav li i {
+  margin-right: 10px;
+}
+
+.dropdown-content {
+  display: none;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.dropdown-content li a {
+  padding: 8px 32px; /* indent sub-items */
+  font-weight: normal;
+}
+
+.caret {
+  margin-left: auto;
+  transition: transform 0.3s;
+}
+
+.dropdown.open .dropdown-content {
+  display: block;
+}
+
+.dropdown.open .caret {
+  transform: rotate(90deg);
+}
